Fixed redirect URL

--- a/join.html
+++ b/join.html
@@ -63,7 +63,7 @@
                             <label>Email:</label>
                             <input type="email" id="email" name="email" placeholder="Enter your Email here" required>
                             <br>
-                            <input type="hidden" name="_next" value="https://thatlukaszguy.github.io/GavelClubSite/thank.html">
+                            <input type="hidden" name="_next" value="https://werokgc.com/thank.html">
                             <input type="hidden" name="_subject" value="GavelClubSite New Submission!">
                             <input type="hidden" name="_autoresponse" value="Thank you for joining us. One of our members will contact you shortly with our meeting details and get you on the path to improving your speaking, presenting and debating skills!">
                             <input type="hidden" name="_template" value="table">
